[gd_scene load_steps=4 format=3 uid="uid://7c6jjktcsf32"]

[ext_resource type="Script" path="res://Scripts/Symbols/symbol_canvas.gd" id="1_kjqk6"]
[ext_resource type="PackedScene" uid="uid://bnb85aydhd8yk" path="res://Scenes/Symbols/Tetragram.tscn" id="4_wsmo4"]

[sub_resource type="Curve" id="Curve_vtrvm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="SymbolCanvas" type="CanvasLayer"]

[node name="DrawingController" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kjqk6")
MAX_LENGTH = 20

[node name="CanvasPanel" type="PanelContainer" parent="DrawingController"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -258.0
offset_right = 218.5
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CursorLine" type="Line2D" parent="DrawingController"]
z_index = 20
width_curve = SubResource("Curve_vtrvm")

[node name="Lines" type="Node2D" parent="DrawingController"]

[node name="SymbolPattern" parent="DrawingController" instance=ExtResource("4_wsmo4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
